=head1 OmniPITR

=head2 2012-01-11

=over

=item * Release version 0.3.1

=item * Fixed bug with handling digests, that could cause omnipitr-backup-master
or omnipitr-backup-slave to *not* make backup if bad digester was requested.

=back

=head2 2012-01-04

=over

=item * Release version 0.3.0

=item * Added omnipitr-synch program, to send PostgreSQL data in sane way to
remote machines (for example to setup new slave).

=item * Switch to use environment based perl interpreter, instead of hardcoding
path

=back

=head2 2011-12-14

=over

=item * Release version 0.2.1

=item * Change handling of IO to use external tools (tee) to avoid deadlocks
in case of slow compression

=back

=head2 2011-11-10

=over

=item * Release version 0.2.0

=item * Added ability to create checksums of backups, with --digest option for
omnipitr-backup-master and omnipitr-backup-slave programs

=back

=head2 2011-08-05

=over

=item * Release version 0.1.3

=item * Fixed bug with handling Minimum Recovery Location in slave backup

=back

=head2 2011-06-30

=over

=item * Release version 0.1.2

=item * Fixed bug with handling multiple local destinations for backups.

=back

=head2 2011-06-17

=over

=item * Release version 0.1.1

=item * Changed short version of --psql-path from -pp to -sp - -pp was already
taken by --pgcontrol-path. Bug reported by luoyi.

=back

=head2 2011-06-14

=over

=item * Release version 0.1.0

=back

=head2 2011-06-08

=over

=item * Fix slave backup on 9.0 systems (new option, -cm)

=item * Add test system, not really configurable now, but works, and lets me
easily verify that OmniPITR still works.

=item * Add (finally) versions. So far only to libraries. Can be read with:

    perl -I/opt/omnipitr/lib -le 'use OmniPITR::Program; print $OmniPITR::Program::VERSION'

=back

=head2 2011-05-18

=over

=item * Allow omnipitr-backup-master and omnipitr-backup-slave to work when data
dir path is given as symlink

=back

=head2 2011-03-24

=over
