@@ -1,5 +1,14 @@
 =head1 OmniPITR
 
+=head2 2012-01-17
+
+=over
+
+=item * New program omnipitr-cleanup to be used as archive_cleanup_command in
+recovery.conf - for streaming replication setups
+
+=back
+
 =head2 2012-01-11
 
 =over
